# tidal-vis

./: README.md  stack.yaml  tidal-vis.cabal
Sound/Tidal/: Vis2.hs  Vis2.hs~  VisCycle.hs  VisCycle.hs~
app/: Main.hs
src/: Common.hs  CycleAnimation.hs  Examples.hs  Vis.hs  VisCycle.hs  VisGradient.hs  VisPart.hs
src/Realtime/: Animation.hs  Server.hs  Types.hs
