name:                tidal-vis
version:             1.0.14
synopsis:            Visual rendering for Tidal patterns and osc messages
homepage:            http://yaxu.org/tidal/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          alex@slab.org
Stability:           Experimental
Copyright:           (c) Alex McLean and others, 2019
category:            Sound
build-type:          Simple
cabal-version:       2.0

--Extra-source-files: README.md tidal.el doc/tidal.md doc/tidal.pdf

Description: Tidal is a domain specific language for live coding pattern. This package allows colour patterns to be rendered as PDF or SVG files.

executable tidal-vis
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  build-depends:       base
                     , tidal-vis

  default-language:    Haskell2010

library
  Exposed-modules:  Common
                    CycleAnimation
                    Examples
                    Realtime.Animation
                    Realtime.Server
                    Realtime.Types
                    Vis
                    VisCycle
                    VisGradient
                    VisPart

  hs-source-dirs:   src

  Build-depends:    base < 5
                  , async
                  , cairo
                  , colour
                  , containers
                  , gloss
                  , hashable
                  , hosc
                  , SDL
                  , SDL-gfx
                  , SDL-image
                  , SDL-ttf
                  , mtl
                  , network
                  , tidal >= 1.0.15
                  , time
                  , unagi-chan

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:   Haskell2010

  default-extensions:   OverloadedStrings
                        RecordWildCards
                        LambdaCase
